--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       <a href="https://drive.google.com/open?id=1LlAMzhQrfE_GU-fkLKZRwZTRVLH5f423&usp=drive_copy">
       <img src="CowCobbler.jpg" alt="" />
     </a>
+    <a href="https://drive.google.com/open?id=1IImugSCDFYf7YQljzDM5K9_bfvCfohdy&usp=drive_copy">
+      <img src="EasyLegs.jpg" alt="" />
+    </a>
   
 
 
