--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
     <a href="https://drive.google.com/open?id=1isGXWLay4Kqbd9sariV2B22fd-x8gfN1&usp=drive_copy">
       <img src="MereFlow.jpg" alt="" />
     </a>
+     <a href=" https://drive.google.com/open?id=1H5OifADZzaYoA_MOY8qCkJ-nInYaipAe&usp=drive_copy">
+      <img src="LungesQuads.jpg" alt="" />
+    </a>
 
 
     
