--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <img src="LungesQuads.jpg" alt="" />
       </a>
       <div class="tags">
+              <a href="https://drive.google.com/open?id=1oOCUkifuNJE_KYpr6sb4cW2chHkrFbyp&usp=drive_copy">Fair Lunge </a>
         
       </div>
     </div>
