--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     .tags a:hover {
       background: #666;
     }
+    h1{font-size:1em}
 
     @media (max-width: 1000px) {
       body {
@@ -67,7 +68,13 @@
   </style>
 </head>
 
-<body>
+<body style="margin-top:20px;">
+
+  <h1 style="text-align:center; margin-bottom:20px;">
+    <a href="bird.html" style="color:white; text-decoration:none;">Bird</a>
+  </h1>
+
+  <!-- This piece is really nice. It starts in butterfly (arms back mind you),  then a simple twist. It goes into hip opener, which is not my favorite, but appreciated --perhaps you could  interchange it for pure knee to chest. It then goes to happy baby, which I love, then chivasana. Overall, a real quick and easy supine session, that is immediate, and without much grough -->
 
   <div class="grid">
 
