--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       flex-wrap: wrap;
       gap: 6px;
     }
+    a{padding-left:1em}
 
     .tags a {
       background: #444;
@@ -71,7 +72,9 @@
 <body style="margin-top:20px;">
 
   <h1 style="text-align:center; margin-bottom:20px;">
-    <a href="bird.html" style="color:white; text-decoration:none;">Bird</a>
+    <a href="bird.html" style="color:white; text-decoration:none;">Bird    </a>
+    
+    <a href="food.html" style="color:white; text-decoration:none;">       Food</a>
   </h1>
 
   <!-- This piece is really nice. It starts in butterfly (arms back mind you),  then a simple twist. It goes into hip opener, which is not my favorite, but appreciated --perhaps you could  interchange it for pure knee to chest. It then goes to happy baby, which I love, then chivasana. Overall, a real quick and easy supine session, that is immediate, and without much grough -->
