--- a/food.html
+++ b/food.html
@@ -152,16 +152,17 @@
       ["Kale", "flax"],
       ["Oranges", "Margarine"],
       ["Craisins", "lemon"],
-      ["big nuts", "lime"],
-      ["Soy", "Bread"],
-      ["bananas", "Bagels"],
-      ["kale", "Potatoes"],
+      ["Peanuts ", "lime"],
+      ["Sunflower ", "corn"],
+      ["tomato", "Bread"],
+      ["bananas", "bageks"],
+      [ "cucumber","Potatoes"],
       ["Berries", "Popcorn"],
-      ["Fried", "Sweet"],
+      ["Soy", "Sweet"],
 
       // $ items at the bottom
       ["Barley$", "Qunioa$"],
-      ["corn$", "lentils$"]
+      ["beans$", "lentils$"]
     ];
 
     const STATES = ["green", "red"];
