--- a/food.html
+++ b/food.html
@@ -149,20 +149,19 @@
 
     // === App Data ===
     const FOOD_LIST = [
-      ["Kale", "flax"],
-      ["Oranges", "Margarine"],
-      ["Craisins", "lemon"],
-      ["Peanuts ", "lime"],
-      ["Sunflower ", "corn"],
-      ["tomato", "Bread"],
-      ["bananas", "bageks"],
-      [ "cucumber","Potatoes"],
-      ["Berries", "Popcorn"],
-      ["Soy", "Sweet"],
-
-      // $ items at the bottom
-      ["Barley$", "Qunioa$"],
-      ["beans$", "lentils$"]
+     ["Kale", "oranges"],
+            ["tomato", "cucumber"],
+            ["seeds", "nuts"],
+            ["craisins", "berries"],
+            ["bananas", "milk"],
+            ["flax", "carrots"],
+            ["soy", "barley"],
+            ["broccoli", "rice"],
+            ["lentils", "quinoa"],
+            ["potatoes", "bread"],
+            ["fried.", "margarine"],
+            ["lime", "corn"],
+            ["sauce", "bathing"]
     ];
 
     const STATES = ["green", "red"];
